Clasificador MobileNet implementado y funcional para el Ejercicio A, Con sus respectivos Archivos HTML, JS Y CSS

--- a/index.html
+++ b/index.html
@@ -23,38 +23,36 @@
         <h1>Entregable Final ML</h1>
 
         <div class="activity-block">
-          <span class="activity-label"
-            >Tarea 1: Reconocimiento de imagen (resultado en inglés).</span
-          >
+          <span class="activity-label">Reconocimiento de imagen</span>
           <button
             class="activity-button"
             onclick="enviarActividad('EjercicioA.html')"
           >
-            Actividad 1: Reconocimiento
+            Actividad A: Reconocimiento
           </button>
         </div>
 
         <div class="activity-block">
-          <span class="activity-label"
-            >Tarea 2: Login con usuario, contraseña y dibujo Canvas.</span
+          <span class="activity-label">
+            Login con usuario, contraseña y dibujo Canvas</span
           >
           <button
             class="activity-button"
             onclick="enviarActividad('EjercicioB.html')"
           >
-            Actividad 2: Login
+            Actividad B: Login
           </button>
         </div>
 
         <div class="activity-block">
           <span class="activity-label"
-            >Tarea 3: Reconocimiento de 5 objetos con Teachable Machine.</span
+            >Reconocimiento de 5 objetos con Teachable Machine</span
           >
           <button
             class="activity-button"
             onclick="enviarActividad('EjercicioC.html')"
           >
-            Actividad 3: Teachable Machine
+            Actividad C: Teachable Machine
           </button>
         </div>
       </div>
