--- a/EjercicioA.html
+++ b/EjercicioA.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EjercicioA</title>
-</head>
-<body>
-    
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.10/p5.min.js"></script>
+    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
+    <link rel="stylesheet" href="CSS/EjercicioA.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <main>
+      <div class="container my-3 app-card">
+        <h2 class="mb-4 text-center app-title">
+          Actividad A: Reconocimiento de Imagen
+        </h2>
+
+        <div class="row justify-content-center">
+          <div class="col-md-12" id="contenedor" >
+            <!-- Aqui CANVAS -->
+          </div>
+        </div>
+
+        <div class="mb-4 control-area">
+          <div class="mt-3">
+            <label for="file-input"
+              >Selecciona una imagen para clasificar:</label
+            >
+          </div>
+          <div class="mt-3">
+            <input
+              type="file"
+              id="file-input"
+              name="file-input"
+              accept="image/*"
+              onchange="handleFileSelect(event)"
+            />
+          </div>
+        </div>
+
+        <div id="results" class="results-area text-center">
+          <!-- Aquí resultados -->
+        </div>
+      </div>
+    </main>
+    <script src="JS/EjercicioA.js"> </script>
+  </body>
 </html>
