--- a/EjercicioB.html
+++ b/EjercicioB.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EjercicioB</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="CSS/EjercicioB.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.10/p5.min.js"></script>
+    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
+  </head>
+  <body>
+    <main>
+      <div class="login-card">
+        <h2 class="app-title">Actividad B: Login con Dibujo</h2>
+
+        <form action="" autocomplete="off" id="form-login">
+          <div class="mb-3">
+            <label for="usuario" class="form-label">Usuario</label>
+            <input type="text" id="usuario" class="form-control" required />
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input
+              type="password"
+              id="password"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="mb-3 text-center">
+            <div
+              id="ml-label"
+              class="py-2 text-center"
+              style="font-weight: bold"
+            >
+              <!-- Esta área mostrará la predicción del modelo ML -->
+            </div>
+
+            <label for="codigo" class="form-label">Zona CANVAS</label>
+            <div id="contenedor-canvas">
+              <!-- Canvas Aquí -->
+            </div>
+          </div>
+
+          <div id="results" class="mt-3 text-center"></div>
+          <div class="d-grid mt-4">
+            <button type="submit" class="btn btn-primary btn-lg">
+              Verificar Login
+            </button>
+          </div>
+        </form>
+        <div class="d-grid mt-2">
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            id="clear-btn"
+          >
+            Limpiar Dibujo
+          </button>
+        </div>
+      </div>
+    </main>
+  </body>
+  <script src="JS/EjercicioB.js"></script>
 </html>
