Clasificador (imageModelURL + 'model.json') implementado y funcional para el Ejercicio C, Con sus respectivos Archivos HTML, JS Y CSS

--- a/EjercicioC.html
+++ b/EjercicioC.html
@@ -1,11 +1,132 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EjercicioC</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="CSS/EjercicioC.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
+  </head>
+  <body>
+    <main>
+      <h1>Actividad C: Clasificación de Imagen (Webcam) y Voz</h1>
+      <p>
+        El modelo clasifica en tiempo real. Configura el sintetizador y habla el
+        resultado.
+      </p>
+
+      <div class="main-content">
+        <div id="classes-display">
+          <h3>Clases de Entrenamiento</h3>
+
+          <div class="class-image-container">
+            <p style="margin: 0; font-weight: bold">(A) Tomatodo</p>
+            <div>
+              <img src="images/tomatodo.jpeg" alt="">
+            </div>
+          </div>
+
+          <div class="class-image-container">
+            <p style="margin: 0; font-weight: bold">(B) Mouse</p>
+            <div>
+              <img src="images/mouse.jpeg" alt="">
+            </div>
+          </div>
+
+          <div class="class-image-container">
+            <p style="margin: 0; font-weight: bold">(C) Mando de PS</p>
+            <div>
+              <img src="images/mando PS.jpeg" alt="">
+            </div>
+          </div>
+
+          <div class="class-image-container">
+            <p style="margin: 0; font-weight: bold">(D) Lampara Sapo</p>
+            <div>
+              <img src="images/lampara sapo.jpeg" alt="">
+            </div>
+          </div>
+
+          <div class="class-image-container">
+            <p style="margin: 0; font-weight: bold">(E) Control Remoto</p>
+            <div>
+              <img src="images/control remoto.jpeg" alt="">
+            </div>
+          </div>
+        </div>
+        <div id="webcam-and-controls">
+          <div id="video-container"></div>
+
+          <div id="controls">
+            <h2>Configuración de Voz</h2>
+
+            <form action="" autocomplete="off" id="speech-form">
+              <div>
+                <select name="voices" id="voices">
+                  <option value="">Seleccionar Voz</option>
+                </select>
+              </div>
+
+              <div style="margin-top: 10px">
+                <label for="pitch">Tono</label>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  step="0.25"
+                  value="1"
+                  id="pitch"
+                />
+              </div>
+
+              <div style="margin-top: 10px">
+                <label for="rate">Velocidad</label>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  step="0.25"
+                  value="1"
+                  id="rate"
+                />
+              </div>
+
+              <div style="margin-top: 10px; margin-bottom: 20px">
+                <label for="volume">Volumen</label>
+                <input
+                  type="range"
+                  min="0"
+                  max="1"
+                  step="0.1"
+                  value="1"
+                  id="volume"
+                />
+              </div>
+            </form>
+
+            <div style="margin-top: 15px">
+              <button type="button" id="speak">
+                Hablar Clasificación Actual
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <script type="text/javascript" src="JS/EjercicioC.js">
+    </script>
+  </body>
 </html>
