--- a/EjercicioA.html
+++ b/EjercicioA.html
@@ -25,13 +25,11 @@
         <h2 class="mb-4 text-center app-title">
           Actividad A: Reconocimiento de Imagen
         </h2>
-
         <div class="row justify-content-center">
           <div class="col-md-12" id="contenedor" >
             <!-- Aqui CANVAS -->
           </div>
         </div>
-
         <div class="mb-4 control-area">
           <div class="mt-3">
             <label for="file-input"
@@ -39,16 +37,9 @@
             >
           </div>
           <div class="mt-3">
-            <input
-              type="file"
-              id="file-input"
-              name="file-input"
-              accept="image/*"
-              onchange="handleFileSelect(event)"
-            />
+            <input type="file" id="file-input" name="file-input" accept="image/*"onchange="handleFileSelect(event)" />
           </div>
         </div>
-
         <div id="results" class="results-area text-center">
           <!-- Aquí resultados -->
         </div>
