Manejo de Detalles en el Proyecto (Redundancia)

--- a/EjercicioC.html
+++ b/EjercicioC.html
@@ -67,15 +67,16 @@
           </div>
         </div>
         <div id="webcam-and-controls">
-          <div id="video-container"></div>
-
+          <div id="video-container">
+            <!-- Aqui el Video = Canvas -->
+          </div>
           <div id="controls">
             <h2>Configuración de Voz</h2>
 
             <form action="" autocomplete="off" id="speech-form">
               <div>
                 <select name="voices" id="voices">
-                  <option value="">Seleccionar Voz</option>
+                  <!-- Aqui se Generan las Voces -->
                 </select>
               </div>
               <div style="margin-top: 10px">
