--- a/EjercicioB.html
+++ b/EjercicioB.html
@@ -31,19 +31,14 @@
             />
           </div>
           <div class="mb-3 text-center">
-            <div
-              id="ml-label"
-              class="py-2 text-center"
-              style="font-weight: bold"
-            >
-              <!-- Esta área mostrará la predicción del modelo ML -->
+            <div id="ml-label"class="py-2 text-center"  style="font-weight: bold">
+              <!-- Esta área Prediccion = Resultados -->
             </div>
             <label for="codigo" class="form-label">Zona CANVAS</label>
             <div id="contenedor-canvas">
               <!-- Canvas Aquí -->
             </div>
           </div>
-          <div id="results" class="mt-3 text-center"></div>
           <div class="d-grid mt-4">
             <button type="submit" class="btn btn-primary btn-lg">
               Verificar Login
